--- a/data/nl.emphisia.icon.metainfo.xml.in
+++ b/data/nl.emphisia.icon.metainfo.xml.in
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop">
-	<id>com.emphisia.gtk.desktop</id>
+	<id>nl.emphisia.icon.desktop</id>
 	<metadata_license>CC0-1.0</metadata_license>
 	<project_license>GPL-3.0-or-later</project_license>
 	<description>
