Added devel and default build option

--- a/data/meson.build
+++ b/data/meson.build
@@ -1,10 +1,16 @@
+desktop_conf = configuration_data()
+desktop_conf.set('icon', application_id)
 desktop_file = i18n.merge_file(
-        input: 'nl.emphisia.icon.desktop.in',
-       output: 'nl.emphisia.icon.desktop',
-         type: 'desktop',
-       po_dir: '../po',
-      install: true,
-  install_dir: get_option('datadir') / 'applications'
+  type: 'desktop',
+  input: configure_file(
+    input: '@0@.desktop.in'.format(base_id),
+    output: '@BASENAME@',
+    configuration: desktop_conf
+  ),
+  output: '@0@.desktop'.format(application_id),
+  po_dir: podir,
+  install: true,
+  install_dir: datadir / 'applications'
 )
 
 desktop_utils = find_program('desktop-file-validate', required: false)
