--- a/data/nl.emphisia.icon.desktop.in
+++ b/data/nl.emphisia.icon.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
-Name=gtk_test
-Exec=gtk_test
-Icon=nl.emphisia.icon
+Name=Folder icon creator
+Exec=folder_icon
+Icon=@icon@
 Terminal=false
 Type=Application
 Categories=GTK;
