--- a/src/config.rs.in
+++ b/src/config.rs.in
@@ -3,4 +3,5 @@ pub static VERSION: &str = @VERSION@;
 pub static GETTEXT_PACKAGE: &str = @GETTEXT_PACKAGE@;
 pub static LOCALEDIR: &str = @LOCALEDIR@;
 pub static PKGDATADIR: &str = @PKGDATADIR@;
+pub static PROFILE: &str = @PROFILE@;
 
