--- a/data/meson.build
+++ b/data/meson.build
@@ -20,17 +20,24 @@ if desktop_utils.found()
   test('Validate desktop file', desktop_utils, args: [desktop_file])
 endif
 
-appstream_file = i18n.merge_file(
-        input: 'nl.emphisia.icon.metainfo.xml.in',
-       output: 'nl.emphisia.icon.metainfo.xml',
-       po_dir: '../po',
-      install: true,
-  install_dir: get_option('datadir') / 'metainfo'
+appdata_conf = configuration_data()
+appdata_conf.set('app-id', base_id)
+appdata_file = i18n.merge_file(
+  input: configure_file(
+    input: '@0@.metainfo.xml.in.in'.format(base_id),
+    output: '@BASENAME@',
+    configuration: appdata_conf
+  ),
+  output: '@0@.metainfo.xml'.format(base_id),
+  po_dir: podir,
+  install: true,
+  install_dir: datadir / 'metainfo'
 )
+
 
 appstreamcli = find_program('appstreamcli', required: false, disabler: true)
 test('Validate appstream file', appstreamcli,
-     args: ['validate', '--no-net', '--explain', appstream_file])
+     args: ['validate', '--no-net', '--explain', appdata_file])
 
 install_data('nl.emphisia.icon.gschema.xml',
   install_dir: get_option('datadir') / 'glib-2.0' / 'schemas'
