--- a/data/icons/meson.build
+++ b/data/icons/meson.build
@@ -4,6 +4,11 @@ install_data(
 )
 
 install_data(
+  '@0@.svg'.format(base_id),
+  install_dir: iconsdir / 'hicolor' / 'scalable' / 'apps'
+)
+
+install_data(
   '@0@-symbolic.svg'.format(base_id),
   install_dir: iconsdir / 'hicolor' / 'symbolic' / 'apps',
   rename: '@0@-symbolic.svg'.format(application_id)
