--- a/meson_options.txt
+++ b/meson_options.txt
@@ -6,5 +6,5 @@ option(
     'development'
   ],
   value: 'default',
-  description: 'The build profile for Eyedropper. One of "default" or "development".'
+  description: 'The build profile for Folder icon chooser. One of "default" or "development".'
 )
