Getting close to ready for release :)

--- a/data/meson.build
+++ b/data/meson.build
@@ -1,5 +1,6 @@
 
 subdir('icons')
+# Desktop File
 desktop_conf = configuration_data()
 desktop_conf.set('icon', application_id)
 desktop_file = i18n.merge_file(
@@ -20,8 +21,10 @@ if desktop_utils.found()
   test('Validate desktop file', desktop_utils, args: [desktop_file])
 endif
 
+# Appdata
 appdata_conf = configuration_data()
 appdata_conf.set('app-id', base_id)
+appdata_conf.set('gettext-package', gettext_package)
 appdata_file = i18n.merge_file(
   input: configure_file(
     input: '@0@.metainfo.xml.in.in'.format(base_id),
@@ -34,14 +37,24 @@ appdata_file = i18n.merge_file(
   install_dir: datadir / 'metainfo'
 )
 
+# GSchema
+gschema_conf = configuration_data()
+gschema_conf.set('app-id', application_id)
+configure_file(
+  input: '@0@.gschema.xml.in'.format(base_id),
+  output: '@0@.gschema.xml'.format(application_id),
+  configuration: gschema_conf,
+  install: true,
+  install_dir: datadir / 'glib-2.0' / 'schemas'
+)
 
 appstreamcli = find_program('appstreamcli', required: false, disabler: true)
 test('Validate appstream file', appstreamcli,
      args: ['validate', '--no-net', '--explain', appdata_file])
 
-install_data('nl.emphisia.icon.gschema.xml',
-  install_dir: get_option('datadir') / 'glib-2.0' / 'schemas'
-)
+# install_data('nl.emphisia.icon.gschema.xml',
+#   install_dir: get_option('datadir') / 'glib-2.0' / 'schemas'
+# )
 
 compile_schemas = find_program('glib-compile-schemas', required: false, disabler: true)
 test('Validate schema file',
