--- a/data/nl.emphisia.icon.gschema.xml.in
+++ b/data/nl.emphisia.icon.gschema.xml.in
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <schemalist gettext-domain="gtk_test">
-	<schema id="nl.emphisia.icon" path="/nl/emphisia/icon/">
+	<schema id="@app-id@" path="/nl/emphisia/icon/">
 	  <key name="folder-svg-path" type="s">
       <default>'/usr/share/icons/Adwaita/scalable/places/folder.svg'</default>
       <summary>Folder SVG Path</summary>
