--- a/data/nl.emphisia.icon.metainfo.xml.in.in
+++ b/data/nl.emphisia.icon.metainfo.xml.in.in
@@ -36,6 +36,7 @@
     </release>
     <release version="0.1" date="2024-07-06" type="development"/>
   </releases>
+  <url type="homepage">https://emphisia.nl</url>
   <url type="bugtracker">https://github.com/youpie/Folder_icon_creator/issues</url>
   <url type="donation">https://ko-fi.com/youpie</url>
   <url type="vcs-browser">https://github.com/youpie/Folder_icon_creator</url>
