Preparing for new release

--- a/data/nl.emphisia.icon.metainfo.xml.in.in
+++ b/data/nl.emphisia.icon.metainfo.xml.in.in
@@ -25,6 +25,20 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release version="2024.2.0" date="2024-08-11" type="stable">
+      <description>
+        <p>This is a new major release of Iconic. Featuring many bug fixes and added features. Some notable ones are:</p>
+        <ol>
+          <li>Drag and drop support</li>
+          <li>Copy-paste support</li>
+          <li>Better file type detection</li>
+          <li>Updated dutch translations</li>
+          <li>Added Hindi translations</li>
+          <li>Fixed spelling mistakes</li>
+          <li>Fixed issues with black pixels not converting to monochrome</li>
+        </ol>
+      </description>
+    </release>
     <release version="1.1.1" date="2024-07-23" type="stable">
       <description>
         <p>Another small update with a few additions and changes</p>
