--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ cairo-rs = "0.20"
 async-channel = {version = "2.3.1"}
 resvg = {version = "0.42.0"}
 usvg = "0.42.0"
+log = "0.4"
+pretty_env_logger = "0.5"
 
 [dependencies.gtk]
 package = "gtk4"
