--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ resvg = {version = "0.42.0"}
 usvg = "0.42.0"
 log = "0.4"
 pretty_env_logger = "0.5"
+ashpd = "0.9.1"
 
 [dependencies.gtk]
 package = "gtk4"
