--- a/data/nl.emphisia.icon.metainfo.xml.in.in
+++ b/data/nl.emphisia.icon.metainfo.xml.in.in
@@ -29,6 +29,7 @@
       <description>
         <p>A new update to Iconic is here! It does not add many features but features a lot of improvements under the hood, this means the app will now crash way less often without any warning. Some changes include:</p>
         <ul>
+          <li>Added ability to drag icon out of iconic directly</li>
           <li>Added error handling on opening files</li>
           <li>Added error handling on saving files</li>
           <li>Added donation link</li>
