--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,17 +4,17 @@ version = "2024.10.1"
 edition = "2021"
 
 [dependencies]
-gettext-rs = { version = "0.7", features = ["gettext-system"] }
+gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
 image = {version = "0.25.2"}
-gio = "0.20"
-librsvg = "2.59.0-beta.3"
-cairo-rs = "0.20"
+gio = "0.20.4"
+librsvg = "2.59.1"
+cairo-rs = "0.20.1"
 async-channel = {version = "2.3.1"}
-resvg = {version = "0.42.0"}
-usvg = "0.42.0"
-log = "0.4"
+resvg = {version = "0.44.0"}
+usvg = "0.44.0"
+log = "0.4.22"
 pretty_env_logger = "0.5"
-ashpd = "0.9.1"
+ashpd = "0.9.2"
 rand = "0.8.5"
 
 
