--- a/data/nl.emphisia.icon.gschema.xml.in
+++ b/data/nl.emphisia.icon.gschema.xml.in
@@ -33,9 +33,17 @@
       <default>0</default>
       <summary>The accent color the user has selected as index for row</summary>
     </key>
+    <key name="previous-system-accent-color" type="s">
+      <default>'Blue'</default>
+      <summary>This is the accent color of the system, the last time it was checked</summary>
+    </key>
     <key name="manual-bottom-image-selection" type="b">
       <default>false</default>
       <summary>If true, the user has set a custom image for the bottom</summary>
+    </key>
+    <key name="accent-color-popup-shown" type="b">
+      <default>false</default>
+      <summary>If true, the pop-up informing the user that the folder color has been adjusted automatically has already been shown</summary>
     </key>
 	</schema>
 </schemalist>
