--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,10 @@ resvg = {version = "0.44.0"}
 usvg = "0.44.0"
 log = "0.4.22"
 pretty_env_logger = "0.5"
-ashpd = "0.9.2"
+ashpd = "0.10.2"
 rand = "0.8.5"
-
+tokio = { version = "1.42.0", features = ["full"] }
+fs_extra = "1.2.0"
 
 
 [dependencies.gtk]
