Almost ready for next release

--- a/data/nl.emphisia.icon.gschema.xml.in
+++ b/data/nl.emphisia.icon.gschema.xml.in
@@ -53,6 +53,10 @@
       <default>false</default>
       <summary>If true, iconic will store top images in chache</summary>
     </key>
+    <key name="automatic-regeneration" type="b">
+      <default>false</default>
+      <summary>Whether to regenerate images automatically</summary>
+    </key>
     <key name="regeneration-hint-shown" type="b">
       <default>false</default>
       <summary>If true, the pop-up informing the user that it is possible to regenerate images has already been shown</summary>
