--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ rand = "0.8.5"
 tokio = { version = "1.42.0", features = ["full"] }
 fs_extra = "1.2.0"
 hex = "0.4.3"
+once_cell = "1.20.2"
 
 
 [dependencies.gtk]
