--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,12 @@ edition = "2021"
 
 [dependencies]
 gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
-image = {version = "0.25.2"}
+image = { version = "0.25.2" }
 gio = "0.20.4"
 librsvg = "2.59.1"
 cairo-rs = "0.20.1"
-async-channel = {version = "2.3.1"}
-resvg = {version = "0.44.0"}
+async-channel = { version = "2.3.1" }
+resvg = { version = "0.44.0" }
 usvg = "0.44.0"
 log = "0.4.22"
 pretty_env_logger = "0.5"
@@ -20,6 +20,7 @@ tokio = { version = "1.42.0", features = ["full"] }
 fs_extra = "1.2.0"
 hex = "0.4.3"
 once_cell = "1.20.2"
+thiserror = "2.0.12"
 
 
 [dependencies.gtk]
